fix summary section covered by title in publication when there is no cover

--- a/aircox_cms/static/aircox_cms/css/theme.css
+++ b/aircox_cms/static/aircox_cms/css/theme.css
@@ -115,6 +115,10 @@ main.detail {
         background-color: rgba(255,255,255,0.8);
     }
 
+    main.detail > header h1.title + section {
+        margin-top: 2em;
+    }
+
     main.detail > header img.cover {
         /*width: 70%;*/
         width: 100%;
